Cascading, sequence-based ID generation support