@@ -2,8 +2,7 @@ package org.litebridge.core;
 
 import jakarta.annotation.Nullable;
 import org.litebridge.commons.CollectionUtils;
-import org.litebridge.core.dto.ChangedField;
-import org.litebridge.core.dto.TrackedDto;
+import org.litebridge.commons.StringUtils;
 import org.litebridge.core.persistence.PersistenceFacade;
 import org.litebridge.db.api.Column;
 import org.litebridge.db.api.DatabaseProvider;
@@ -16,8 +15,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeSet;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class LiteBridge {
 
@@ -31,8 +28,8 @@ public class LiteBridge {
         this.persistenceFacade = new PersistenceFacade(tableRegistry, databaseProvider);
     }
 
-    public void register(final Class<?> dtoClass, @Nullable final String catalog, @Nullable final String schema, final String table, final Map<String, String> fieldColumnMap) throws SQLException {
-        tableRegistry.addTable(dtoClass, mapToTable(dtoClass, catalog, schema, table, fieldColumnMap));
+    public void register(final Class<?> dtoClass, @Nullable final String catalog, @Nullable final String schema, final String table, final Map<String, ColumnSpec> fieldColumnSpecMap) throws SQLException {
+        tableRegistry.addTable(dtoClass, mapToTable(dtoClass, catalog, schema, table, fieldColumnSpecMap));
     }
 
     public <T> T track(final T dto) {
@@ -58,7 +55,7 @@ public class LiteBridge {
         }
     }
 
-    private Table mapToTable(final Class<?> dtoClass, @Nullable final String catalog, @Nullable final String schema, final String table, final Map<String, String> fieldColumnMap) throws SQLException {
+    private Table mapToTable(final Class<?> dtoClass, @Nullable final String catalog, @Nullable final String schema, final String table, final Map<String, ColumnSpec> fieldColumnSpecMap) throws SQLException {
         // Up-front validation
         if (dtoClass == null) {
             throw new IllegalArgumentException("DTO class cannot be null");
@@ -66,40 +63,45 @@ public class LiteBridge {
             throw new IllegalArgumentException("Not a DTO: " + dtoClass.getName());
         } else if (table == null) {
             throw new IllegalArgumentException("Table name cannot be null");
-        } else if (CollectionUtils.isEmpty(fieldColumnMap)) {
+        } else if (CollectionUtils.isEmpty(fieldColumnSpecMap)) {
             throw new IllegalArgumentException("No field-column map provided");
         }
 
         // Read the table metadata
         final TableMetaData tableMetaData = databaseProvider.getTableMetaData(catalog, schema, table);
-        final Map<Field, Column> columnMap = mapFields(dtoClass, tableMetaData, fieldColumnMap);
+
+        final Map<Field, Column> columnMap = mapFields(dtoClass, tableMetaData, fieldColumnSpecMap);
         return new Table(tableMetaData, columnMap);
     }
 
-    private Map<Field, Column> mapFields(final Class<?> dtoClass, final TableMetaData tableMetaData, final Map<String, String> fieldColumnMap) {
-        final Set<String> unmappedColumns = new TreeSet<>(tableMetaData.columns().keySet());
+    private Map<Field, Column> mapFields(final Class<?> dtoClass, final TableMetaData tableMetaData, final Map<String, ColumnSpec> fieldColumnSpecMap) {
+        final Set<String> unmappedColumns = new TreeSet<>(tableMetaData.getColumns().keySet());
         final Map<Field, Column> mappedFields = new HashMap<>();
 
         // Validate and formalise field mapping
-        fieldColumnMap.forEach((fieldName, columnName) -> {
-            if (!tableMetaData.columns().containsKey(columnName)) {
-                throw new IllegalArgumentException(String.format("Column '%s', mapped by field '%s' of DTO '%s', does not exist in table: '%s'", columnName, fieldName, dtoClass, tableMetaData.table()));
+        fieldColumnSpecMap.forEach((fieldName, columnSpec) -> {
+            if (!tableMetaData.getColumns().containsKey(columnSpec.getName())) {
+                throw new IllegalArgumentException(String.format("Column '%s', mapped by field '%s' of DTO '%s', does not exist in table: '%s'", columnSpec, fieldName, dtoClass, tableMetaData.getTable()));
             }
 
-            if (!unmappedColumns.contains(columnName)) {
+            if (!unmappedColumns.contains(columnSpec.getName())) {
                 // Column is already mapped
                 final String conflictingFieldName = mappedFields.entrySet().stream()
-                        .filter(fieldColumnEntry -> fieldColumnEntry.getValue().name().equals(columnName))
+                        .filter(fieldColumnEntry -> fieldColumnEntry.getValue().getName().equals(columnSpec.getName()))
                         .map(Map.Entry::getKey)
                         .map(Field::getName)
                         .findFirst()
-                        .orElseThrow(() -> new IllegalStateException("Conflicting field for column '%s' not found; current field: '%s'".formatted(columnName, fieldName)));
-                throw new IllegalArgumentException(String.format("Column '%s' is already mapped by field '%s'", columnName, conflictingFieldName));
+                        .orElseThrow(() -> new IllegalStateException("Conflicting field for column '%s' not found; current field: '%s'".formatted(columnSpec, fieldName)));
+                throw new IllegalArgumentException(String.format("Column '%s' is already mapped by field '%s'", columnSpec, conflictingFieldName));
             }
 
             // Add field-column mapping
             final Field field = ClassUtil.getField(dtoClass, fieldName);
-            final Column column = tableMetaData.columns().get(columnName);
+            final Column column = tableMetaData.getColumns().get(columnSpec.getName());
+
+            if (!StringUtils.isBlank(columnSpec.getSequence())) {
+                column.setSequence(columnSpec.getSequence());
+            }
 
             if (!ClassUtil.isBasicType(field.getType())
                     && !tableRegistry.containsTable(field.getType())) {
@@ -108,18 +110,18 @@ public class LiteBridge {
             }
 
             mappedFields.put(field, column);
-            unmappedColumns.remove(columnName);
+            unmappedColumns.remove(columnSpec.getName());
         });
 
         // Check for unmapped columns
         if (!unmappedColumns.isEmpty()) {
             // Check if any non-nullable columns are missing
             final List<String> missingColumns = unmappedColumns.stream()
-                    .filter(columnName -> !tableMetaData.columns().get(columnName).nullable())
+                    .filter(columnName -> !tableMetaData.getColumns().get(columnName).isNullable())
                     .toList();
 
             if (!missingColumns.isEmpty()) {
-                throw new IllegalArgumentException(String.format("Unmapped non-nullable columns for table '%s': %s; DTO class: '%s'", tableMetaData.table(), missingColumns, dtoClass.getName()));
+                throw new IllegalArgumentException(String.format("Unmapped non-nullable columns for table '%s': %s; DTO class: '%s'", tableMetaData.getTable(), missingColumns, dtoClass.getName()));
             }
         }
 
